--- a/src/main/webapp/views/main.html
+++ b/src/main/webapp/views/main.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="menu-option-container" ng-class="{ 'menu-option-container-active' : openMenu}">
-    <a href="#/menu/device_manager"
+    <a href="#/main/device_manager"
        ng-repeat="platform in main.getPlatforms()"
        ng-click="main.selectPlatform(platform)">
       <div class="menu-option">
