--- a/src/main/webapp/views/platform-info.html
+++ b/src/main/webapp/views/platform-info.html
@@ -36,8 +36,8 @@
       <input type="text" placeholder="Algorithm" ng-model="main.getCurrentPlatform().encryptedAlgorithm">
       <label class="form-label">Algorithm:</label>
 
-      <button type="submit" class="create-button" ng-click="main.getCurrentPlatform().createPlatform()">
-        <span>Create</span>
+      <button type="submit" class="create-button" ng-click="main.updatePlatform()">
+        <span>Update</span>
       </button>
 
     </form>
