Corregido error para que salga siempre el menú de edición de plataformas

--- a/src/main/webapp/views/main.html
+++ b/src/main/webapp/views/main.html
@@ -8,13 +8,13 @@
   </div>
 
   <div class="menu-option-container" ng-class="{ 'menu-option-container-active' : openMenu}">
-    <a href="#/main/device_manager"
+    <div
        ng-repeat="platform in main.getPlatforms()"
        ng-click="main.selectPlatform(platform)">
       <div class="menu-option">
         <span>{{platform.name}}</span>
       </div>
-    </a>
-
+    </div>
   </div>
+
 </div>
