--- a/src/main/webapp/views/add-platform.html
+++ b/src/main/webapp/views/add-platform.html
@@ -15,7 +15,11 @@
       <input type="text" placeholder="Id" ng-model="addPlatform.platformId">
       <label class="form-label">Id:</label>
 
-      <input type="text" placeholder="Type" ng-model="addPlatform.type">
+      <!--<input type="text" placeholder="Type" ng-model="addPlatform.type">-->
+      <select ng-model="addPlatform.type">
+        <option value="http://inter-iot.eu/UniversAAL">http://inter-iot.eu/UniversAAL</option>
+        <option value="http://inter-iot.eu/sofia2">http://inter-iot.eu/sofia2</option>
+      </select>
       <label class="form-label">Type:</label>
 
       <input type="text" placeholder="Endpoint" ng-model="addPlatform.baseEndpoint">
