--- a/src/main/webapp/views/add-device.html
+++ b/src/main/webapp/views/add-device.html
@@ -1,6 +1,6 @@
-<div class="resource-container">
+<div class="resource-container2">
 
-  <div class="resource-header">
+  <div class="resource-header2">
     <h3>Add Device</h3>
 
     <div class="close-info" title="Close window" ng-click="addDevice.closeDeviceInfo()">
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="info-container">
+  <div class="info-container2">
 
     <form class="add-form" name="add-device">
 
