Cambiada selección del Hosted By de los dispositivos. Ahora es un desplegable con las plataformas disponibles.

--- a/src/main/webapp/views/add-device.html
+++ b/src/main/webapp/views/add-device.html
@@ -22,7 +22,9 @@
       <input type="text" placeholder="Id" ng-model="addDevice.deviceId">
       <label class="form-label">Id:</label>
 
-      <input type="text" placeholder="Host" ng-model="addDevice.hostedBy">
+      <select ng-model="addDevice.hostedBy">
+        <option ng-repeat="option in addDevice.getPlatformsId()" value="{{option.platformId}}">{{option.name}}</option>
+      </select>
       <label class="form-label">Hosted By:</label>
 
       <input type="text" placeholder="Location" ng-model="addDevice.location">
