Añadida comprobación de si hay seleccionado un dispositivo/plataforma antes de eliminar/actualizar.

--- a/src/main/webapp/views/device-info.html
+++ b/src/main/webapp/views/device-info.html
@@ -54,7 +54,7 @@
       <input type="text" placeholder="Made Observation" ng-model="devCtrl.getSelectedDevice().madeObservation">
       <label class="form-label">Made Observation:</label>
 
-      <button style="float: left" type="submit" class="create-button" ng-click="">
+      <button style="float: left" type="submit" class="create-button" ng-click="devCtrl.updateDevice()">
         <span>Update</span>
       </button>
 
