--- a/src/main/webapp/views/platform-info.html
+++ b/src/main/webapp/views/platform-info.html
@@ -62,7 +62,7 @@
       <input type="text" placeholder="Upstream Output Alignment Version" ng-model="main.getCurrentPlatform().upOutputAligVers">
       <label class="form-label">Upstream Output Alignment Version:</label>
 
-      <button style="float: left" type="submit" class="create-button" ng-click="">
+      <button style="float: left" type="submit" class="create-button" ng-click="main.updatePlatform()">
         <span>Update</span>
       </button>
 
