Añadidos los apartados Deployment Manager, Maintenace Panel y About

--- a/src/main/webapp/views/add-device.html
+++ b/src/main/webapp/views/add-device.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="info-container2">
+  <div class="option-device-container info-inner">
 
     <form class="add-form" name="add-device">
 
@@ -54,7 +54,9 @@
       <input type="text" placeholder="Made Observation" ng-model="addDevice.madeObservation">
       <label class="form-label">Made Observation:</label>
 
-      <button type="submit" class="create-button" ng-click="addDevice.createDevice()">
+      <hr class="line">
+
+      <button type="submit" class="info-button" ng-click="addDevice.createDevice()">
         <span>Create</span>
       </button>
 
