--- a/src/main/webapp/views/add-platform.html
+++ b/src/main/webapp/views/add-platform.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="info-container2">
+  <div class="option-device-container info-inner">
 
     <form class="add-form" name="add-platform">
 
@@ -62,7 +62,9 @@
       <input type="text" placeholder="Upstream Output Alignment Version" ng-model="addPlatform.upOutputAligVers">
       <label class="form-label">Upstream Output Alignment Version:</label>
 
-      <button type="submit" class="create-button" ng-click="addPlatform.createPlatform()">
+      <hr class="line">
+
+      <button type="submit" class="info-button" ng-click="addPlatform.createPlatform()">
         <span>Create</span>
       </button>
 
