--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -7,7 +7,7 @@ body {
 header {
   width: 100vw;
   height: 50px;
-  background: #ededed;
+  background: #f5f5f5;
 }
 
 .logo-container {
@@ -160,10 +160,94 @@ header {
   }
 }
 
+/*-----MENU LATERAL-----*/
+
+.lateral-nav {
+  width: 50px;
+  height: calc(100vh - 50px);
+  float: left;
+  margin-right: -10px;
+  overflow: hidden;
+  transition: 0.5s ease all;
+}
+
+.lateral-nav:hover {
+  width: 240px;
+}
+
+.main-container {
+  width: calc(100vw - 60px);
+  height: calc(100vh - 50px);
+  /*background: blue;*/
+  float: right;
+  transition: 0.5s ease all;
+  display: inline-flex;
+  justify-content: start;
+  /*background: url("../images/bg.svg") center no-repeat;*/
+  /*background-size: 100vw;*/
+}
+
+.lateral-nav:hover~.main-container {
+  width: calc(100vw - 250px);
+}
+
+.button-menu {
+  width: 50px;
+  height: 50px;
+  margin: 0 0 0 0;
+  padding: 0 5px;
+  border-bottom: 1px solid #ccc;
+  transition: 0.5s ease all;
+  cursor: pointer;
+}
+
+.button-menu-active {
+  background: #f5f5f5;
+  border-left: 3px solid #2bbee8;
+  padding: 0 5px 0 2px;
+}
+
+.lateral-nav:hover .button-menu {
+  width: 250px;
+}
+
+.icon-container {
+  width: 30px;
+  height: 30px;
+  margin: 10px 5px;
+  float: left;
+}
+
+.button-text {
+  width: 0;
+  height: 50px;
+  line-height: 50px;
+  position: absolute;
+  margin-left: 40px;
+  opacity: 0;
+  overflow: hidden;
+  color: #2bbee8;
+  float: right;
+  transition: 0.5s ease all;
+  /*transition-delay: 0.5s;*/
+}
+
+.lateral-nav:hover .button-text {
+  width: 200px;
+  opacity: 1;
+}
+
+.button-text:hover {
+  color: #0f2144;
+}
+
+/*-----FIN DEL MENU LATERAL-----*/
+
 .left-div {
   width: 20%;
   height: calc(100vh - 50px);
-  position: absolute;
+  margin: 0 0 0 10px;
+  /*float: left;*/
 }
 
 @media screen and (max-width: 720px) and (orientation: portrait) {
@@ -171,6 +255,8 @@ header {
     width: calc(100% - 20px);
     height: auto;
     z-index: 10;
+    position: absolute;
+    /*float: none;*/
   }
 }
 
@@ -186,11 +272,70 @@ header {
   }
 }
 
+.left-div-50 {
+  width: calc(50% - 20px);
+  height: calc(100vh - 90px);
+  margin: 20px 10px 20px 10px;
+  /*float: left;*/
+}
+
+@media screen and (max-width: 720px) and (orientation: portrait) {
+  .left-div-50 {
+    width: calc(100% - 20px);
+    height: auto;
+    z-index: 10;
+    position: absolute;
+    margin: 0;
+    /*float: none;*/
+  }
+}
+
+@media screen and (max-width: 720px) and (orientation: landscape) {
+  .left-div-50 {
+    width: calc(50% - 10px);
+  }
+}
+
+@media screen and (min-width: 721px) and (max-width: 1024px) {
+  .left-div-50 {
+    width: calc(50% - 10px);
+  }
+}
+
+.right-div-50 {
+  width: calc(50% - 30px);
+  height: calc(100vh - 90px);
+  /*background: blue;*/
+  margin: 20px 20px 20px 10px;
+  /*float: left;*/
+}
+
+@media screen and (max-width: 720px) and (orientation: portrait) {
+  .right-div-50 {
+    width: calc(100% - 20px);
+    height: auto;
+    z-index: 10;
+    position: absolute;
+    margin: 0;
+    /*float: none;*/
+  }
+}
+
+@media screen and (max-width: 720px) and (orientation: landscape) {
+  .right-div-50 {
+    width: calc(50% - 10px);
+  }
+}
+
+@media screen and (min-width: 721px) and (max-width: 1024px) {
+  .right-div-50 {
+    width: calc(50% - 10px);
+  }
+}
+
 .center-div {
-  width: 40%;
+  width: calc(40% - 10px);
   height: calc(100vh - 50px);
-  left: 20%;
-  position: absolute;
 }
 
 @media screen and (max-width: 720px) and (orientation: portrait) {
@@ -198,6 +343,7 @@ header {
     width: 100%;
     top: 110px;
     left: 0;
+    position: absolute;
   }
 }
 
@@ -218,8 +364,8 @@ header {
 .right-div {
   width: 40%;
   height: calc(100vh - 50px);
-  left: 60%;
-  position: absolute;
+  /*left: 60%;*/
+
 }
 
 @media screen and (max-width: 720px) and (orientation: portrait) {
@@ -227,6 +373,7 @@ header {
     width: 100%;
     top: 110px;
     left: 0;
+    position: absolute;
   }
 }
 
@@ -245,15 +392,15 @@ header {
 }
 
 .menu-container {
-  width: calc(100% - 20px);
+  width: 100%;
   height: calc(100% - 40px);
-  margin: 20px 0 0 20px;
+  margin: 20px 0 0 0;
 }
 
 .menu-bar {
   width: 100%;
   height: 40px;
-  background: #ededed;
+  background: #f5f5f5;
   cursor: pointer;
 }
 
@@ -349,9 +496,9 @@ header {
 
 .option-container {
   width: calc(100% - 30px);
-  height: calc(51% - 40px);
+  height: calc(50% - 30px);
   margin: 20px 10px 20px 20px;
-  background: #ededed;
+  background: #f5f5f5;
 }
 
 @media screen and (max-width: 720px) and (orientation: portrait) {
@@ -397,6 +544,31 @@ header {
   }
 }
 
+.option-container-margen0 {
+  width: 100%;
+  height: 100%;
+  /*margin: 20px 10px 20px 20px;*/
+  background: #f5f5f5;
+}
+
+@media screen and (max-width: 720px) and (orientation: portrait) {
+  .option-container-margin0 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 720px) and (orientation: landscape) {
+  .option-container-margin0 {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 721px) and (max-width: 1024px) {
+  .option-container-margin0 {
+    width: 100%;
+  }
+}
+
 .option-header {
   width: 100%;
   height: 40px;
@@ -410,6 +582,36 @@ header {
   margin: 0 0 0 10px;
   padding: 0;
   float: left;
+}
+
+.option-header-left {
+  height: 40px;
+  width: calc(100% - 120px);
+  float: left;
+}
+
+.option-header-right {
+  height: 40px;
+  width: 120px;
+  float: right;
+  display: inline-flex;
+  justify-content: flex-end;
+}
+
+.square-header-button {
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  color: #fff;
+  border-left: 1px solid #fff;
+  background: transparent;
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+.square-header-button:hover {
+  background: #0f2144;
 }
 
 .option-header-button {
@@ -427,11 +629,12 @@ header {
 }
 
 .option-device-container {
-  width: calc(100% + 35px);
+  width: 100%;
   height: calc(100% - 40px);
-  overflow: hidden;
+  overflow: auto;
   margin: auto;
   position: relative;
+  border-bottom: 1px solid #2bbee8;
 }
 
 @media screen and (max-width: 720px) and (orientation: portrait) {
@@ -488,9 +691,9 @@ header {
 }
 
 .option-device {
-  width: calc(100% - 40px);
+  width: 100%;
   height: 50px;
-  padding: 0 10px;
+  padding: 0 5px 0 10px;
   border-bottom: 1px solid #b3b3b3;
   background: transparent;
   cursor: pointer;
@@ -518,14 +721,14 @@ header {
 }
 
 .option-device:hover {
-  background: #ccc;
+  background: #ddd;
 }
 
 .option-device-active {
   height: 50px;
-  width: calc(100% - 40px);
+  width: 100%;
   padding: 0 10px;
-  background: #ccc;
+  background: #ddd;
   border-bottom: 1px solid #b3b3b3;
 }
 
@@ -564,8 +767,10 @@ header {
   float: left;
   height: 50px;
   text-align: left;
+  width: calc(100% - 40px)
 }
 
+/*
 @media screen and (max-width: 720px) {
   .option-name-container {
     width: 65%;
@@ -592,9 +797,10 @@ header {
 
 @media screen and (min-width: 1367px){
   .option-name-container {
-    width: 75% !important;
+    width: calc(100% - 40px)
   }
 }
+*/
 
 .option-platform-container {
   width: 30%;
@@ -615,11 +821,11 @@ header {
 }
 
 .option-buttons-container {
-  width: 25%;
+  width: auto;
   margin-top: 5px;
   float: right;
 }
-
+/*
 @media screen and (max-width: 720px) {
   .option-buttons-container {
     width: 34%;
@@ -637,6 +843,7 @@ header {
     width: 28%;
   }
 }
+*/
 
 .option-subscription-container {
   width: 40px;
@@ -701,6 +908,53 @@ header {
   color: #fff;
 }
 
+.square-option-device-button {
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  float: right;
+  text-align: center;
+  line-height: 40px;
+  /*padding: 0 20px;*/
+  /*background: rgba(43, 190, 232, 0.5);*/
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+@media screen and (max-width: 720px) and (orientation: portrait) {
+  .square-option-device-button {
+    padding: 0 10px;
+  }
+}
+
+.option-device:hover .square-option-device-button {
+  background: #2bbee8;
+}
+
+.square-option-device-button:hover {
+  background: #0f2144 !important;
+}
+
+.square-option-device-button span {
+  line-height: 40px !important;
+  float: none !important;
+  color: #2bbee8;
+  margin: 0;
+  transition: 0.3s ease all;
+}
+
+.option-device:hover .square-option-device-button span {
+  color: #fff;
+}
+
+.square-option-device-button-active {
+  background: #0f2144;
+}
+
+.square-option-device-button-active span {
+  color: #fff;
+}
+
 .resource-container {
   width: calc(100% - 30px);
   height: calc(51% - 40px);
@@ -733,7 +987,7 @@ header {
   width: calc(100% - 30px);
   height: calc(100% - 40px);
   margin: 20px 20px 20px 10px;
-  background: #ededed;
+  background: #f5f5f5;
 }
 
 @media screen and (max-width: 720px) and (orientation: portrait) {
@@ -835,7 +1089,6 @@ header {
   width: calc(100% - 20px);
   height: calc(50% - 60px);
   margin: 10px auto 10px auto;
-  /*background: red;*/
   border: 1px solid #999;
 }
 
@@ -1027,34 +1280,41 @@ pre {
 }
 
 .add-form {
-  width: calc(100% - 20px);
-  margin: 10px;
+  width: 100%;
+  /*padding: 10px;*/
 }
 
 .add-form label {
-  width: 35%;
+  width: calc(35% - 10px);
   float: left;
   line-height: 30px;
-  margin-bottom: 10px;
+  margin: 0 0 10px 10px;
   font-weight: normal;
   clear: left;
 }
 
 .add-form input {
-  width: 65%;
+  width: calc(65% - 10px);
   float: right;
   height: 30px;
   padding-left: 5px;
-  margin-bottom: 10px;
+  margin: 0 10px 10px 0;
   transition: 0.3s ease all;
 }
 
 .add-form select {
-  width: 65%;
+  width: calc(65% - 10px);
   float: right;
   height: 30px;
   padding-left: 5px;
-  margin-bottom: 10px;
+  margin: 0 10px 10px 0;
+}
+
+.add-form textarea {
+  width: calc(65% - 10px);
+  height: 200px;
+  resize: none;
+  margin: 0 10px 5px 0;
 }
 
 .add-form input:focus {
@@ -1068,11 +1328,20 @@ pre {
   border: 1px solid #2bbee8;
 }
 
+.add-form textarea:focus {
+  outline: none;
+  border: 1px solid #2bbee8;
+}
+
 .add-form input:focus + .form-label {
   color: #2bbee8;
 }
 
 .add-form select:focus + .form-label {
+  color: #2bbee8;
+}
+
+.add-form textarea:focus + .form-label {
   color: #2bbee8;
 }
 
@@ -1133,6 +1402,8 @@ pre {
   cursor: pointer;
   clear: both;
   border: none;
+  display: inline-flex;
+  justify-content: flex-end;
   user-select: none;
   transition: 0.3s ease all;
 }
@@ -1153,4 +1424,174 @@ pre {
 
 .create-button:focus {
   outline: none;
+}
+
+.info-button {
+  width: auto;
+  height: 30px;
+  margin: 0 10px 0 10px;
+  float: right;
+  text-align: center;
+  padding: 0 20px;
+  background: rgba(43,190,232,0.5);
+  cursor: pointer;
+  clear: both;
+  border: none;
+  display: inline-flex;
+  justify-content: flex-end;
+  user-select: none;
+  transition: 0.3s ease all;
+}
+
+.info-button span {
+  line-height: 30px;
+  color: #0f2144;
+  margin: 0;
+}
+
+.info-button:hover {
+  background: #0f2144;
+}
+
+.info-button:hover span {
+  color: #fff;
+}
+
+.info-button:focus {
+  outline: none;
+}
+
+/*---CUSTOM SCROLL BAR---*/
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f5f5f5;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #2b709a;
+  transition: 0.3s ease all;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #0f2144;
+}
+
+/*---END CUSTOM SCROLL BAR---*/
+
+.line {
+  clear: both;
+  border-bottom: 1px solid #b3b3b3;
+  margin-bottom: 12px;
+}
+
+.info-left {
+  width: 35%;
+  float: left;
+  line-height: 30px;
+  margin-bottom: 10px;
+  font-weight: normal;
+  clear: left;
+  padding: 0 10px;
+}
+
+.info-right {
+  width: 65%;
+  float: right;
+  line-height: 30px;
+  height: 30px;
+  color: #2bbee8;
+  padding: 0 10px;
+  margin-bottom: 10px;
+  text-align: right;
+  transition: 0.3s ease all;
+}
+
+.button-container-form {
+  width: 100%;
+  /*padding: 0 10px;*/
+  float: right;
+  display: inline-flex;
+  justify-content: flex-end;
+}
+
+.info-inner {
+  padding-top: 10px;
+}
+
+.center-container {
+  max-width: 1200px;
+  max-height: calc(80% - 50px);
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.about-menu {
+  width: 100%;
+  height: 50px;
+  display: inline-flex;
+  justify-content: flex-start;
+}
+
+.about-button {
+  height: 50px;
+  width: auto;
+  padding: 0 20px;
+  margin-right: 2px;
+  line-height: 50px;
+  background: rgba(43,190,232,0.5);
+  border-radius: 3px 3px 0 0;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+.about-button:hover {
+  background: #0f2144;
+}
+
+.about-button-active {
+  background: #2bbee8;
+}
+
+.about-container {
+  height: calc(100% - 50px);
+  width: 100%;
+}
+
+.about-info-container {
+  height: 100%;
+  width: 100%;
+  background: #f5f5f5;
+}
+
+.about-info-header {
+  height: 40px;
+  width: 100%;
+  background: #2bbee8;
+}
+
+.about-info-header h3 {
+  font-size: 16px;
+  line-height: 40px;
+  color: #fff;
+  margin: 0 0 0 10px;
+  padding: 0;
+  float: left;
+}
+
+.about-info-inner {
+  width: 100%;
+  height: calc(100% - 40px);
+  overflow-y: auto;
+  padding: 10px;
+  border-bottom: 1px solid #2bbee8;
 }
