--- a/src/main/webapp/views/device-info.html
+++ b/src/main/webapp/views/device-info.html
@@ -1,69 +1,110 @@
 <div class="resource-container2">
 
   <div class="resource-header2">
-    <h3>Device: {{devCtrl.getSelectedDevice().deviceId}}</h3>
+    <h3>Device: {{componentDevice.getSelectedDevice().deviceId}}</h3>
 
-    <div class="close-info" title="Close window" ng-click="devCtrl.closeDeviceInfo()">
+    <div class="close-info" title="Close window" ng-click="componentDevice.closeDeviceInfo()">
       <span class="glyphicon glyphicon-remove"></span>
     </div>
   </div>
 
-  <div class="info-container2">
+  <div class="option-device-container info-inner">
 
-    <form class="add-form" name="add-device">
+    <div class="info-left">
+      Type:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().deviceTypes[0]}}
+    </div>
 
-      <select ng-model="devCtrl.getSelectedDevice().deviceTypes[0]">
-        <option value="DEVICE">Device</option>
-        <option value="SENSOR">Sensor</option>
-        <option value="ACTUATOR">Actuator</option>
-      </select>
-      <label class="form-label">Type:</label>
+    <div class="info-left">
+      Id:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().deviceId}}
+    </div>
 
-      <input type="text" placeholder="Id" ng-model="devCtrl.getSelectedDevice().deviceId">
-      <label class="form-label">Id:</label>
+    <div class="info-left">
+      Hosted By:
+    </div>
+    <div class="info-right" ng-repeat="option in componentDevice.getPlatformsId()">
+      {{option.name}}
+    </div>
 
-      <select ng-model="devCtrl.getSelectedDevice().hostedBy">
-        <option ng-repeat="option in devCtrl.getPlatformsId()" value="{{option.platformId}}">{{option.name}}</option>
-      </select>
-      <label class="form-label">Hosted By:</label>
+    <div class="info-left">
+      Location:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().location}}
+    </div>
 
-      <input type="text" placeholder="Location" ng-model="devCtrl.getSelectedDevice().location">
-      <label class="form-label">Location:</label>
+    <div class="info-left">
+      Name:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().name}}
+    </div>
 
-      <input type="text" placeholder="Name" ng-model="devCtrl.getSelectedDevice().name">
-      <label class="form-label">Name:</label>
+    <div class="info-left">
+      Hosts:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().hosts}}
+    </div>
 
-      <input type="text" placeholder="Hosts" ng-model="devCtrl.getSelectedDevice().hosts">
-      <label class="form-label">Hosts:</label>
+    <div class="info-left">
+      For Property:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().forProperty}}
+    </div>
 
-      <input type="text" placeholder="For Property" ng-model="devCtrl.getSelectedDevice().forProperty">
-      <label class="form-label">For Property:</label>
+    <div class="info-left">
+      Made Actuation:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().madeActuation}}
+    </div>
 
-      <input type="text" placeholder="Made Actuation" ng-model="devCtrl.getSelectedDevice().madeActuation">
-      <label class="form-label">Made Actuation:</label>
+    <div class="info-left">
+      ImplementsProcedure:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().implementsProcedure}}
+    </div>
 
-      <input type="text" placeholder="Implements Procedure" ng-model="devCtrl.getSelectedDevice().implementsProcedure">
-      <label class="form-label">Implements Procedure:</label>
+    <div class="info-left">
+      Observes:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().observes}}
+    </div>
 
-      <input type="text" placeholder="Observes" ng-model="devCtrl.getSelectedDevice().observes">
-      <label class="form-label">Observes:</label>
+    <div class="info-left">
+      Detects:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().detects}}
+    </div>
 
-      <input type="text" placeholder="Detects" ng-model="devCtrl.getSelectedDevice().detects">
-      <label class="form-label">Detects:</label>
+    <div class="info-left">
+      MadeObservation:
+    </div>
+    <div class="info-right">
+      {{componentDevice.getSelectedDevice().madeObservation}}
+    </div>
 
-      <input type="text" placeholder="Made Observation" ng-model="devCtrl.getSelectedDevice().madeObservation">
-      <label class="form-label">Made Observation:</label>
+    <hr class="line">
 
-      <button style="float: left" type="submit" class="create-button" ng-click="devCtrl.updateDevice()">
-        <span>Update</span>
-      </button>
-
-      <button style="float: right; margin-top: -30px" type="submit" class="create-button" ng-click="devCtrl.deleteDevice()">
+    <div class="button-container-form">
+      <button type="submit" class="info-button" ng-click="componentDevice.deleteDevice()">
         <span>Delete</span>
       </button>
 
-
-    </form>
+      <button type="submit" class="info-button" ng-click="componentDevice.goToUpdateDevice()">
+        <span>Update</span>
+      </button>
+    </div>
 
   </div>
 
