--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -174,6 +174,12 @@ header {
   color: #0f2144;
 }
 
+@media screen and (min-width: 1025px) {
+  .burger-container {
+    display: none;
+  }
+}
+
 /*-----MENU LATERAL-----*/
 
 .lateral-nav {
